[package]
name = "speculoos"
version = "0.12.0"
authors = [
    "cfrancia <cfrancia@users.noreply.github.com>",
    "oknozor <paul.delafosse@protonmail.com>"
]
license = "Apache-2.0"
description = "Fluent test assertions"
repository = "https://github.com/oknozor/speculoos"
readme = "README.md"
keywords = ["fluent", "testing", "matchers", "assert", "assertions"]
edition = "2021"

[features]
default = ["num", "json"]
json = ["dep:serde_json"]

[dependencies]
num = { version = "0.4.0", optional = true }
serde_json = { version = "1.0.140", optional = true }
